overflow fixed

--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -17,8 +17,18 @@ $cream: #EEE5D0;
 $black: #0E0A08;
 
 /*MAIN SETUP*/
+
 html {
     font-size: 62.5%;
+}
+
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+    overflow-y:auto;
 }
 
 a {
@@ -64,7 +74,6 @@ a {
     position: absolute;
     z-index: -1;
     top: -20rem !important;
-    width: 100%;
     height: 115rem;
 }
 
